--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "express-validator": "^5.3.1",
     "http": "0.0.0",
+    "jsonwebtoken": "^8.5.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
     "mongoose": "^5.4.18",
