--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment-timezone": "^0.5.23",
     "mongoose": "^5.4.18",
     "pino": "^5.11.1",
+    "redis": "^2.8.0",
     "shortid": "^2.2.14",
     "socket.io": "^2.2.0"
   },
