email support added

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "http": "0.0.0",
@@ -20,6 +21,7 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
     "mongoose": "^5.4.18",
+    "nodemailer": "^6.3.0",
     "pino": "^5.11.1",
     "redis": "^2.8.0",
     "shortid": "^2.2.14",
